fix: Fix paddings, fix stretching of numbers dots

--- a/client/Pages/PagePaymentBlr/PagePaymentBlr.module.css
+++ b/client/Pages/PagePaymentBlr/PagePaymentBlr.module.css
@@ -203,14 +203,14 @@
 }
 
 @media (--mobile) {
-  .introduction {
-    max-width: 300px;
-  }
-
   .inner {
     padding: 0;
 
     list-style: none;
+  }
+
+  .headingWrapper {
+    flex-wrap: nowrap;
   }
 
   .pic {
