--- a/client/Pages/PagePaymentBlr/elements/PaymentOptionsBlr/PaymentOptionsBlr.module.css
+++ b/client/Pages/PagePaymentBlr/elements/PaymentOptionsBlr/PaymentOptionsBlr.module.css
@@ -1,6 +1,3 @@
-.wrapper {
-}
-
 .headingWrapper {
   display: flex;
   flex-wrap: wrap;
@@ -44,5 +41,9 @@
 @media (--mobile) {
   .cardsLogo {
     padding-left: var(--space-xb);
+  }
+
+  .headingWrapper {
+    flex-wrap: nowrap;
   }
 }
